[package]
name = "lawscape-api-server"
version = "0.1.0"
edition = "2024"
descrtiption = "外部からアクセスされるAPIを提供する"

[dependencies]
axum = { version = "0.8.1", features = ["json"] }
chrono = { version = "0.4.39", features = ["serde"] }
reqwest = { version = "0.12.12", features = ["rustls-tls", "json"] }
tower-http = { version = "0.6.2", features = ["cors"] }

[dependencies.tokio]
workspace = true

[dependencies.thiserror]
workspace = true


[dependencies.serde]
workspace = true

[dependencies.clap]
workspace = true

[dependencies.tracing]
workspace = true

[dependencies.tracing-subscriber]
workspace = true
